# platform-neuro-flow-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  stale.yml  test.yaml  update-pre-commit.yml
alembic/: env.py
alembic/versions/: 0647beeadb7d_add_org_name.py  18e02ee52b12_add_bake_name.py  ae504a8e5860_add_project_name_column.py  c56d0a4eaed5_store_bake_id_in_config_files_table.py  d50ee518e13e_index_task_attempt.py  dd6533a83f29_enable_cascade_removal.py  f00badb90a87_create_tables.py  f2f6c4cf6930_add_bake_images.py  f36b3465eb48_add_bake_tags.py  f3fc27385ef3_cascade_removal_for_live_jobs.py
charts/platform-neuro-flow/: Chart.yaml  values-dev.yaml  values-mts.yaml  values-staging.yaml  values.yaml
charts/platform-neuro-flow/templates/: _helpers.tpl  deployment.yaml  externalSecret.yaml  ingress.yaml  ping-middleware.yaml  rbac.yaml  secrets.yml  service.yaml
deploy/platform-neuro-flow-api/: Chart.yaml  values-dev-azure.yaml  values-dev.yaml  values-mts.yaml  values-staging-azure.yaml  values-staging.yaml  values-template.yaml
deploy/platform-neuro-flow-api/templates/: deployment.yaml  ingress.yaml
platform_neuro_flow_api/: __init__.py  api.py  config.py  config_factory.py  identity.py  postgres.py  project_deleter.py  schema.py  service.py  utils.py  validators.py  watchers.py
platform_neuro_flow_api/storage/: __init__.py  base.py  in_memory.py  postgres.py
requirements/: syntax.txt  test.txt
tests/: utils.py
tests/integration/: api.py  auth.py  conftest.py  docker.py  postgres.py  test_api.py  test_postgres.py  test_postgres_storage.py  test_project_deleter.py  test_service.py
tests/unit/: conftest.py  test_config.py  test_in_memory_storage.py  test_validators.py  test_watchers.py
