[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "platform-neuro-flow-api"
version = "0.0.0"
description = "Apolo.us service"
readme = "README.md"
license = "Proprietary"
homepage = "https://github.com/neuro-inc/platform-neuro-flow-api"
authors = ["Apolo.us <team@apolo.us>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "platform_neuro_flow_api" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
aiohttp = "3.13.2"
apolo-api-client = "25.6.0"
neuro-auth-client = "25.8.2"
neuro-logging = "25.11.0"
marshmallow = "3.20.1"
aiohttp-swagger3 = "0.10.0"
markupsafe = "3.0.3"
alembic = "1.17.2"
psycopg2-binary = "2.9.11"
asyncpg = "0.31.0"
sqlalchemy = "1.4.25"
yarl = "1.22.0"
greenlet = "3.2.4"
apolo-events-client = "^25.10.0"
apolo-kube-client = "^25.12.1"
tenacity = "^9.1.2"

[tool.poetry.scripts]
platform-neuro-flow-api = "platform_neuro_flow_api.api:main"

[tool.poetry.group.dev.dependencies]
docker = "7.1.0"
pytest = "9.0.1"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
mypy = "1.19.0"
pre-commit = "4.5.0"
pytest-aiohttp = "^1.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "C90", "UP", "B", "ASYNC", "N", "FBT", "A", "C4", "EM", "FA", "ICN",
    "G", "PIE", "PYI", "PT", "RET", "PTH"
]
ignore = [
    "A001", "A002", "A003", "N818", "PT006", "PT011", "EM101", "EM102", "B008",
    "RET503", "PT012", "FBT001", "FBT002", "B904"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jose",
    "ignore::DeprecationWarning:.*",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning:apispec.ext.marshmallow.field_converter",
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning:aiohttp_swagger3",
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning:aiohttp_security"
]

[tool.coverage.run]
branch = true
source = ["platform_neuro_flow_api"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "aiohttp_security.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp_apispec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neuro_auth_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp_cors"
ignore_missing_imports = true
