[metadata]
name = platform-neuro-flow-api
description = Neuro-flow service
url = https://github.com/neuro-inc/platform-neuro-flow-api
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    aiohttp==3.7.4
    neuro_auth_client==21.10.1
    neuro-logging==21.10.2
    aiohttp-cors==0.7.0
    marshmallow==3.12.2
    aiohttp-apispec==2.2.1
    alembic==1.7.5
    psycopg2-binary==2.9.1
    asyncpg==0.24.0
    sqlalchemy==1.4.25

[options.entry_points]
console_scripts =
    platform-neuro-flow-api = platform_neuro_flow_api.api:main

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:jose

[coverage:run]
branch = True
source = platform_neuro_flow_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
